# multilingual-example

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _quarto.yml  dependencies.R  download_taxi_data  install_python_pkg  project_setup  requirements.txt  setup.cfg
data/: .gitignore
notebooks/: duckdb_explore.ipynb  sample.ipynb  taxi_report.Rmd  taxi_report.qmd
outputs/: taxi_report.qmd
references/: METHODOLOGY.md
src/: locations.py
src/data/: create_taxi_view.py  make_dataset.py  summarise_time_of_day.py  summarise_weekly.py
