[metadata]
name = src
version = 0.0.1
author = Hamed
description = Playing around with GitHub Copilot, trying it out for data science projects. 
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
python-requires = >=3.10
install_requires =
    click
    python-dotenv

[options.packages.find]
where=src
