[metadata]
name = src
version = 0.0.1
author = Hamed
description = This project is a simple example of multilingual data science. 
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
python-requires = >=3.10
install_requires =
    click
    python-dotenv

[options.packages.find]
where=src
